# johndoe

./: .gitignore  LICENSE.md  README.md  johndoe.py  pyproject.toml
assets/: bullet.ase  bullet_spr.aseprite  collectible_spr.aseprite  enemy1_spr.aseprite  enemy2_spr.aseprite  enemy3_spr.aseprite  enemy4_spr.aseprite  enemy5_spr.aseprite  fire_bullet_spr.aseprite  fire_spr.aseprite  gas_spr.aseprite  gun_spr.aseprite  johndoe_spr.aseprite  johndoespr.ase  johndoetitlescreen.ase  vindoe_spr.aseprite
johndoe/: camera.py  collectibles.py  definitions.py  enemy.py  game.py  game_clock.py  game_over_scene.py  game_ui.py  high_score_scene.py  level_scene.py  player.py  scene.py  scene_manager.py  scores.py  singleton.py  title_scene.py  ui.py  weapon.py  world.py
